12-node-security-gatekeeper/manifests/bad-hostpath.yaml
# mounts the node's filesystem  ->  should be REJECTED
apiVersion: v1
kind: Pod
metadata:
  name: bad-hostpath
spec:
  containers:
    - name: c
      image: nginx:alpine
      volumeMounts:
        - name: host
          mountPath: /host
  volumes:
    - name: host
      hostPath:
        path: /
