12-node-security-gatekeeper/manifests/good-pod.yaml
# plain, well-behaved pod  ->  should be ALLOWED
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  containers:
    - name: c
      image: nginx:alpine
