12-node-security-gatekeeper/manifests/constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockPrivileged
metadata:
  name: no-privileged-pods
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockHostPath
metadata:
  name: no-hostpath-pods
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
